--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
 					</a>
 				</li>
 				<li>
-					<a href="">
+					<a href="#school-desc">
 						<span class="out">招生易览</span>
 						<span class="over">招生易览</span>
 					</a>
 				</li>
 				<li>
-					<a href="">
+					<a href="#grow">
 						<span class="out">易起成长</span>
 						<span class="over">易起成长</span>
 					</a>
 				</li>
 				<li>
-					<a href="">
+					<a href="#part2">
 						<span class="out">精彩易观</span>
 						<span class="over">精彩易观</span>
 					</a>
 				</li>
 				<li>
-					<a href="">
+					<a href="#part">
 						<span class="out">清秀河院</span>
 						<span class="over">清秀河院</span>
 					</a>
@@ -92,7 +92,7 @@
 				<p class="school-content">学校占地面积近600亩，另有1800亩规划用地，校园现有建筑面积近30万平方米，校园绿化面积16多万平方米，教学科研仪器设备总值1.2多亿元，生均超过1万元；图书馆藏文献总量100多万册（含电子图书），计算机网络覆盖全校，有功能完备的艺术大楼、学术报告厅、演播厅、大学生活动中心、数字化校园网络系统和高标准运动场等综合教学设施及场所。</p>
 			</div>
 			<div class="dright">
-				<h2 class="school-desc">易起成长</h2>
+				<h2 class="school-desc" id="grow">易起成长</h2>
 				<div class="english-desc">University Grow Up</div>
 				<div class="content-list">
 					<a href="#" style="margin-left: 71px"><img src="images/growUp_icon1.png" title="校园管理"><span>校园管理</span></a>
@@ -114,7 +114,7 @@
 	<!-- news start -->
 		<div class="news">
 			<div class="lnews">
-				<h2 class="school-desc">招生易览</h2>
+				<h2 class="school-desc" id="school-desc">招生易览</h2>
 				<div class="english-desc">Recruit students</div>
 				<ul class="news-list">
 					<li><a href="http://www.yiban.cn/forum/article/show/article_id/14716847/channel_id/136206/puid/5755763" target="_blank">河池学院2016年农村小学全科教师定向培养招生计划（高中起点）</a></li>
@@ -130,7 +130,7 @@
 				</ul>
 			</div>
 			<div class="rnews">
-				<h2 class="school-desc">精彩易观</h2>
+				<h2 class="school-desc" id="part2">精彩易观</h2>
 				<div class="english-desc">University news</div>
 				<ul class="news-list">
 					<li><a href="http://www.yiban.cn/forum/article/show/article_id/14693661/channel_id/30335/puid/5000118" target="_blank">河池学院2016年暑期社会实践赴忻城红渡镇“三下乡”火热进行中</a></li>
@@ -148,7 +148,7 @@
 	<!-- news end -->
 	<!-- start -->
 		
-		<div class="charm_link">
+		<div class="charm_link" id="part">
 			<h2><span>清秀河院</span></h2>
 			<div class="flexslider">
 				<ul class="slider">
