--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- banner start -->
 		<div id="main">
 			<div class="box">
-				<img style="opacity:1;filter:alpha(opacity=100);" src="images/1.jpg" />
+				<img style="opacity:1; filter:alpha(opacity=100);" src="images/1.jpg" />
 				<img src="images/5.jpg" /> 
 				<img src="images/2.jpg" /> 
 				<img src="images/3.jpg" /> 
@@ -32,7 +32,7 @@
 		<div class="nav">
 			<ul>
 				<li>
-					<a href="">
+					<a href="#">
 						<span class="out">首页</span>
 						<span class="over">首页</span>
 					</a>
@@ -62,13 +62,13 @@
 					</a>
 				</li>
 				<li>
-					<a href="http://xbasp.hcnu.edu.cn/zsw/login.asp">
+					<a href="http://xbasp.hcnu.edu.cn/zsw/login.asp" target="_blank">
 						<span class="out">录取传送门</span>
 						<span class="over">录取传送门</span>
 					</a>
 				</li>
 				<li>
-					<a href="">
+					<a href="#">
 						<span class="out">河池学院简介</span>
 						<span class="over">河池学院简介</span>
 					</a>
@@ -96,7 +96,7 @@
 				<div class="english-desc">University Grow Up</div>
 				<div class="content-list">
 					<a href="#" style="margin-left: 71px"><img src="images/growUp_icon1.png" title="校园管理"><span>校园管理</span></a>
-					<a href="#"><img src="images/growUp_icon2.png" title="心里调适"><span>心里调适</span></a>
+					<a href="#"><img src="images/growUp_icon2.png" title="心里调适"><span>心理调适</span></a>
 					<a href="#"><img src="images/growUp_icon4.png" title="认识社会"><span>认识社会</span></a>
 					<a href="#"><img src="images/growUp_icon5.png" title="安全意识"><span>安全意识</span></a>
 					<a href="#"><img src="images/growUp_icon6.png" title="校园文化"><span>校园文化</span></a>
@@ -166,15 +166,15 @@
 		<div class="footer">
 			<div class="footer-center">
 				<p>
-					<a href="#"><img src="images/logo-lg.png"></a>
+					<a href="http://www.yiban.cn/" target="_blank"><img src="images/logo-lg.png"></a>
 				</p>
               	<a href="http://www.yiban.cn/service_treaty.php" target="_blank">用户协议</a>
 				<a href="http://open.yiban.cn/" target="_blank">开放平台</a>
                 <a href="http://hr.yiban.cn/" target="_blank">校园招聘</a>
                 <a href="http://search.51job.com/list/co,c,2306770,0000,10,1.html" target="_blank">社会招聘</a>
-                <a href="mailto:contact@yiban.cn">联系我们</a>
+                <a href="mailto:contact@yiban.cn" target="_blank">联系我们</a>
                 <a href="http://www.yiban.cn/help.html" target="_blank">客服中心</a>
-                <a href="http://www.yiban.cn/mobile/index.html">手机易班</a>
+                <a href="http://www.yiban.cn/mobile/index.html" target="_blank">手机易班</a>
             </div>
 		</div>
 	<!-- footer end -->
