--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
 				<div class="english-desc">University Grow Up</div>
 				<div class="content-list">
 					<a href="#" style="margin-left: 71px"><img src="images/growUp_icon1.png" title="校园管理"><span>校园管理</span></a>
-					<a href="#"><img src="images/growUp_icon2.png" title="心里调适"><span>心理调适</span></a>
-					<a href="#"><img src="images/growUp_icon4.png" title="认识社会"><span>认识社会</span></a>
-					<a href="#"><img src="images/growUp_icon5.png" title="安全意识"><span>安全意识</span></a>
-					<a href="#"><img src="images/growUp_icon6.png" title="校园文化"><span>校园文化</span></a>
+					<a target="_blank" href="http://www.yiban.cn/forum/article/show/channel_id/30335/puid/5000118/article_id/14895749"><img src="images/growUp_icon2.png" title="心里调适"><span>心理调适</span></a>
+					<a target="_blank" href="http://www.yiban.cn/forum/article/show/channel_id/30335/puid/5000118/article_id/14925403"><img src="images/growUp_icon4.png" title="认识社会"><span>认识社会</span></a>
+					<a target="_blank" href="http://q.yiban.cn/app/index/appid/57091?userid=6224355&v_time=147297232629076"><img src="images/growUp_icon5.png" title="安全意识"><span>安全意识</span></a>
+					<a target="_blank" href="http://www.yiban.cn/forum/article/show/channel_id/30335/puid/5000118/article_id/14923809"><img src="images/growUp_icon6.png" title="校园文化"><span>校园文化</span></a>
 					<i></i>
 				</div>
 				<div class="life-link" style="">
-					<a href="#"><img src="images/life1.png" title="吃"></a>
-					<a href="#"><img src="images/life2.png" title="住"></a>
-					<a href="#"><img src="images/life3.png" title="行"></a>
-					<a href="#"><img src="images/life4.png" title="学"></a>
+					<a target="_blank" href="http://www.yiban.cn/forum/article/show/channel_id/30335/puid/5000118/article_id/14919979"><img src="images/life1.png" title="吃"></a>
+					<a target="_blank" href="http://www.yiban.cn/forum/article/show/channel_id/30335/puid/5000118/article_id/14923531"><img src="images/life2.png" title="住"></a>
+					<a target="_blank" href="http://www.yiban.cn/forum/article/show/channel_id/30335/puid/5000118/article_id/14909711"><img src="images/life3.png" title="行"></a>
+					<a target="_blank" href="http://www.yiban.cn/forum/article/show/channel_id/30335/puid/5000118/article_id/14917995"><img src="images/life4.png" title="学"></a>
 				</div>
 			</div>
 		</div>
